--- a/literalura/pom.xml
+++ b/literalura/pom.xml
@@ -55,11 +55,11 @@
 
 	</dependencies>
 
-	<dependency>
+	<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.15.2</version>
-	</dependency>
+	</dependency> -->
 
 	<build>
 		<plugins>
