--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=literalura
+
+spring.datasource.url=jdbc:postgresql://localhost/liter_alura
+spring.datasource.username=postgres
+spring.datasource.password=nay12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
